--- a/index.html
+++ b/index.html
@@ -311,6 +311,21 @@
         </div>
       </div>
     </section>
+    <section data-anchor="contact" class="section contact-section">
+      <h1 class="heading">Get in touch</h1>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <p class="lead text-center">If you'd like to discuss something, leave a comment<br/><small>OR</small><br/>just want to say Hi or "How you doin.." ? feel free to  <a href="mailto:mudassir.dev@gmail.com" class="get-in-touch">get in touch</a></p>
+          <hr class="hr-lg"/>
+          <div class="social-links-container">
+            <div class="text-center">
+              <div class="social-links-group"><a href="//www.linkedin.com/in/mudassir0909" target="_blank" data-toggle="tooltip" data-placement="top" title="LinkedIn" class="link-linkedin"><i class="fa fa-linkedin fa-2x"></i></a><a href="//github.com/mudassir0909" target="_blank" data-toggle="tooltip" data-placement="top" title="Github" class="link-github"><i class="fa fa-github fa-2x"></i></a><a href="//stackoverflow.com/users/1482899/mudassir-ali" target="_blank" data-toggle="tooltip" data-placement="top" title="Stack Overflow" class="link-stackoverflow"><i class="fa fa-stack-overflow fa-2x"></i></a><a href="//codepen.io/mudassir0909" target="_blank" data-toggle="tooltip" data-placement="top" title="Codepen" class="link-codepen"><i class="fa fa-codepen fa-2x"></i></a><a href="//dribbble.com/mudassir0909" target="_blank" data-toggle="tooltip" data-placement="top" title="Dribbble" class="link-dribble clear-margin"><i class="fa fa-dribbble fa-2x"></i></a></div>
+              <div class="social-links-group"><a href="//facebook.com/mudassirali.0909" target="_blank" data-toggle="tooltip" data-placement="top" title="Facebook" class="link-facebook"><i class="fa fa-facebook fa-2x"></i></a><a href="//twitter.com/guesswhat4951" target="_blank" data-toggle="tooltip" data-placement="top" title="Twitter" class="link-twitter"><i class="fa fa-twitter fa-2x"></i></a><a href="//stackoverflow.com/users/1482899/mudassir-ali" target="_blank" data-toggle="tooltip" data-placement="top" title="Quora" class="clear-margin"><img src="/static/img/quora.png" alt="Quora Profile" class="quora-icon"/></a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
   <script src="static/js/vendor.js"></script>
   <script src="static/js/main.js"></script>
