Using so card widget callback to update label

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
   <script type="text/javascript" src="//mudassir0909.github.io/jsonresume-card/dist/1.0.0/jr-card-widget.min.js"></script>
   <script type="text/javascript" src="//mudassir0909.github.io/stackoverflow-card/dist/1.0.0/so-card-widget.min.js"></script>
   <script>
-    window.onload = function() {
-      debugger;
+    window.soAsyncInit = function() {
       document.getElementsByClassName('so-reputation-label')[0].innerText = 'reputation';
     }
   </script>
